# DNFAutoFire

./: .editorconfig  .gitignore  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
docs/: README.md  pitfalls.json
scripts/: check-encoding.mjs
src/: app.tsx  index.css  main.tsx
src-tauri/: .clippy.toml  Cargo.toml  app.manifest  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/pthreads-win32/include/: pthread.h
src-tauri/src/: assistant.rs  commands.rs  config.rs  error.rs  hotkey.rs  lib.rs  logging.rs  main.rs  startup.rs  state.rs  tray.rs
src-tauri/src/app/: events.rs  mod.rs  state.rs
src-tauri/src/config/: defaults.rs  migration.rs  mod.rs  paths.rs  repository.rs  schema.rs  validation.rs
src-tauri/src/core/: autofire.rs  autorun.rs  classes.rs  combo.rs  detection.rs  hook.rs  keyboard.rs  mod.rs  window.rs
src-tauri/src/domain/: classes.rs  mod.rs
src-tauri/src/engines/: autofire.rs  autorun.rs  combo.rs  mod.rs
src-tauri/src/ipc/: bindings.rs  bootstrap.rs  diagnostics.rs  mod.rs  profiles.rs  runtime.rs  settings.rs  system.rs
src-tauri/src/platform/: floating_control.rs  hook.rs  hotkey.rs  keyboard.rs  logging.rs  mod.rs  notify.rs  startup.rs  tray.rs
src-tauri/src/runtime/: mod.rs  services.rs
src-tauri/src/vision/: detection.rs  mod.rs
src-tauri/windows/: hooks.nsh
(+55 files in other folders)
