[package]
name = "dnfautofire"
version = "0.3.0"
description = "DNF按键助手"
authors = ["Arthur"]
edition = "2021"
license-file = "../LICENSE.md"
publish = false

[lib]
name = "dnf_autofire_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "fmt"] }
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Media",
] }
